--- a/contracts/package.json
+++ b/contracts/package.json
@@ -20,5 +20,8 @@
         "prettier": "^3.3.3",
         "prettier-plugin-solidity": "^1.4.1",
         "typescript-eslint": "^8.10.0"
+    },
+    "dependencies": {
+        "@openzeppelin/contracts": "^5.1.0"
     }
 }
